minor wording changes

--- a/src/about.html
+++ b/src/about.html
@@ -32,14 +32,14 @@
       <!-- welcome on install/update -->
       <div class="welcome hide">
         <h3>Welcome!</h3>
-        <p>FoxyProxy has been the around for almost 15 years. So if you're upgrading from a legacy version, and your proxy settings are missing, please <a href="/import.html">import</a> them.<br>
+        <p>FoxyProxy has been around for almost 15 years. So if you're upgrading from a legacy version, and your proxy settings are missing, please <a href="/import.html">import</a> them.<br>
         <i>(This message only appears after FoxyProxy has upgraded or is first installed.)</i></p>
       </div>
 
       <h3>Info</h3>
       <p><strong>Edition:</strong> <span id="edition"></span><br>
       <strong>Version:</strong> <span id="version"></span><br>
-      <strong>Source Code:</strong> <a target="_blank" href="https://github.com/foxyproxy/firefox-extension">Code</a></p>
+      <strong>Source Code:</strong> <a target="_blank" href="https://github.com/foxyproxy/firefox-extension">Here</a></p>
 
       <h3>Help</h3>
       <p>
