minor wording changes; placeholder text

--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -28,7 +28,7 @@
 
       <h3>Step 1</h3>
       <label data-i18n="enterUrl"></label><span data-i18n="enterUrlNote"></span>
-      <input id="url" type="url" value="https://getfoxyproxy.org">
+      <input id="url" type="url" value="https://getfoxyproxy.org" placeholder="https://getfoxyproxy.org">
 
 
       <h3>Step 2</h3>
@@ -42,7 +42,7 @@
           <label data-i18n="type"></label>
           <select id="type">
             <option value="1">Wildcard</option>
-            <option value="2">Reg Exp</option>
+            <option value="2">Regular Expression</option>
           </select>
         </div>
 
