revert reg exp full spelling so it's consistent with rest of the addon

--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -42,7 +42,7 @@
           <label data-i18n="type"></label>
           <select id="type">
             <option value="1">Wildcard</option>
-            <option value="2">Regular Expression</option>
+            <option value="2">Reg Exp</option>
           </select>
         </div>
 
