change default proxy type from https/ssl to http -- unforunately this is what majority of people use because most proxy servers do not offer https/ssl

--- a/src/proxy.html
+++ b/src/proxy.html
@@ -121,8 +121,8 @@
           <div class="rightData">
           <label data-i18n="proxyType"></label>
           <select id="proxyType">
-            <option value="1">HTTP</option>
-            <option value="2" selected>HTTPS/SSL</option>
+            <option value="1" selected>HTTP</option>
+            <option value="2">HTTPS/SSL</option>
             <option value="3">SOCKS5</option>
             <option value="4">SOCKS4</option>
             <option value="6">PAC URL</option>
