--- a/src/import.html
+++ b/src/import.html
@@ -63,7 +63,7 @@
       <fieldset>
         <legend>Import Settings from FoxyProxy 5.0+</legend>
         
-        <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends,<button type="button" class="button small" data-i18n="export"><i class="fa fa-upload"></i> </button> FoxyProxy settings. Then use this page to import those settings. By default, the file is called <i id="filename"></i>.<br><br>
+        <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends,<button type="button" class="button small" data-i18n="export"><i class="fa fa-upload"></i> </button> FoxyProxy settings. Then use this page to import those settings. By default, the file is called <i><span data-i18n="extensionName"></span>_YYYY-MM-DD.json</i>.<br><br>
         <input type="file" id="importJson" accept=".json">
         <label for="importJson" class="button" data-i18n="import"><i class="fa fa-download"></i> </label>
       </fieldset>        
