minor changes to import from foxyproxy servers

--- a/src/import.html
+++ b/src/import.html
@@ -46,8 +46,8 @@
     <div class="prime">
       
       <fieldset>
-        <legend>Import Proxies from FoxyProxy Account</legend>
-        <p>If you have an account with <a href="https://getfoxyproxy.org/order/" target="_blank">FoxyProxy</a>, you can import your proxies directly into the extesnion.</p>
+        <legend>Import VPN/Proxies from FoxyProxy Purchase</legend>
+        <p>If you have a paid account with <a href="https://getfoxyproxy.org/order/" target="_blank">FoxyProxy</a>, you can import your proxies here.</p>
         
         <label>Username</label>
         <input id="username" type="text" spellcheck="false" placeholder="username">
