update release notes; remove Edit header for pattners

--- a/src/patterns.html
+++ b/src/patterns.html
@@ -69,7 +69,7 @@
           <thead>
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
-              <th>HTTP/s</th><th data-i18n="active"></th><th data-i18n="edit"></th>
+              <th>HTTP/s</th><th data-i18n="active"></th><th></th>
             </tr>
             <!-- template -->
             <tr class="template">
@@ -114,7 +114,7 @@
           <thead>
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
-              <th>HTTP/s</th><th data-i18n="active"></th><th data-i18n="edit"></th>
+              <th>HTTP/s</th><th data-i18n="active"></th><th></th>
              </tr>
           </thead>
 
