pattern bug fix; minor text changes in patterns screen (I dont like the layout, though); version bump

--- a/src/about.html
+++ b/src/about.html
@@ -58,7 +58,12 @@
 
 
       <h3>Release Notes for Recent Releases</h3>
-
+			<h4>Version 7.1</h4>
+        <ul>
+					<li>Patterns bugfix for bug introduced in 7.0</li>
+					<li>Text changes in patterns window</li>
+				</ul>
+				
       <h4>Version 7.0</h4>
         <ul>
 
