--- a/src/patterns.html
+++ b/src/patterns.html
@@ -57,7 +57,9 @@
 
     <!-- main -->
     <div class="prime main">
-      <div style="text-align: right;">
+			<strong><span style="margin-right: 15rem" data-i18n="activeNote"></span></strong>
+			<br>
+      <div>
         <a href="/pattern-help.html" target="_blank"><span data-i18n="patternHelp"></span> <i class="fa fa-question-circle"></i></a> |
         <a href="/pattern-tester.html" target="_blank"><span data-i18n="patternTester"></span> <i class="fa fa-flask"></i></a>
       </div>
@@ -114,7 +116,7 @@
           <thead>
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
-              <th>HTTP/s</th><th data-i18n="active"></th><th></th>
+	              <th>HTTP/s</th><th data-i18n="active"></th><th></th>
              </tr>
           </thead>
 
