--- a/src/about.html
+++ b/src/about.html
@@ -39,7 +39,7 @@
       <h3>Info</h3>
       <p><strong>Edition:</strong> <span id="edition"></span><br>
       <strong>Version:</strong> <span id="version"></span><br>
-      <strong>Source Code:</strong> <a target="_blank" href="https://github.com/foxyproxy/firefox-extension">Here</a></p>
+      <strong>Source Code:</strong> <a target="_blank" href="https://github.com/foxyproxy/firefox-extension">GitHub</a></p>
 
       <h3>Help</h3>
       <p>
@@ -58,12 +58,19 @@
 
 
       <h3>Release Notes for Recent Releases</h3>
-			<h4>Version 7.1</h4>
+      <h4>Version 7.2</h4>
         <ul>
-					<li>Patterns bugfix for bug introduced in 7.0</li>
-					<li>Text changes in patterns window</li>
-				</ul>
-				
+        <li>HTTP Basic Auth bugfix introduced in 7.0; discussed <a href="https://github.com/foxyproxy/firefox-extension/issues/30">here</a>.</li>
+        <li>Fix minor import bug when importing FoxyProxy settings for paid accounts.</li>
+      </ul>
+      
+          <h3>Release Notes for Recent Releases</h3>
+      <h4>Version 7.1</h4>
+            <ul>
+      <li>Patterns bugfix for bug introduced in 7.0</li>
+      <li>Text changes in patterns window</li>
+      </ul>
+  
       <h4>Version 7.0</h4>
         <ul>
 
@@ -89,7 +96,7 @@
           <li>Proxy Page</li>
           <li class="sub">Option to set active on|off on proxy Edit page</li>
           <li class="sub">username/password/port are kept when adding new proxies to ease creation of multiple proxies with same username/password</li>
-					<li class="sub">Default no proxy for  localhost and intranet/private IP addresses is set to OFF</li>
+  <li class="sub">Default no proxy for  localhost and intranet/private IP addresses is set to OFF</li>
 
 
           <li>Import Page</li>
@@ -106,7 +113,7 @@
           <li class="sub">Added size control to Log entries</li>
           <li class="sub">Default is set to log off and size 100 entries</li>
 
-					<li><strong>Default proxy</strong> is no longer created for new installations. Users can create this manually if they want it.</li>
+  <li><strong>Default proxy</strong> is no longer created for new installations. Users can create this manually if they want it.</li>
           <li>i18n support</li>
           <li>Removed all but one external javascript libraries: JQuery, Clusterize & Vex</li>
           <li>Greatly streamlined code</li>
