better messaging in patterns

--- a/src/patterns.html
+++ b/src/patterns.html
@@ -57,13 +57,14 @@
 
     <!-- main -->
     <div class="prime main">
-			<strong><span style="margin-right: 15rem" data-i18n="activeNote"></span></strong>
-			<br>
-      <div>
+			<div class="prime warning">
+				<span data-i18n="activeNote"></span><strong><span data-i18n="modePatterns"></span></strong>
+			</div>
+			<div>
         <a href="/pattern-help.html" target="_blank"><span data-i18n="patternHelp"></span> <i class="fa fa-question-circle"></i></a> |
         <a href="/pattern-tester.html" target="_blank"><span data-i18n="patternTester"></span> <i class="fa fa-flask"></i></a>
-      </div>
-
+      </div>			
+			
       <h3 data-i18n="whitePatterns"></h3>
       <!-- table template -->
       <div class="scroll" style="margin-bottom: 2em;">
